@@ -44,6 +44,7 @@ test_programs = \
   test_utp                   \
   test_session               \
   test_web_seed              \
+  test_url_seed              \
   test_remap_files           \
   test_gzip                  \
   test_utf8                  \
@@ -172,6 +173,7 @@ enum_if_SOURCES = enum_if.cpp
 test_utp_SOURCES = test_utp.cpp
 test_session_SOURCES = test_session.cpp
 test_web_seed_SOURCES = test_web_seed.cpp
+test_url_seed_SOURCES = test_url_seed.cpp
 test_remap_files_SOURCES = test_remap_files.cpp
 test_gzip_SOURCES = test_gzip.cpp
 test_utf8_SOURCES = test_utf8.cpp
